# Simple-neural-network

./: .gitignore  README.md  logging.json  pyproject.toml
.github/workflows/: main.yml
docs/source/: conf.py  index.rst  modules.rst  simple_neural_network.rst
examples/: classification.ipynb
simple_neural_network/: __init__.py  activations.py  evolution.py  metrics.py  neural_network.py
tests/: test_activations.py  test_evolution.py  test_metrics.py  test_neural_network.py
