[tool.poetry]
name = "simple-neural-network"
version = "1.0.0"
description = "Introduces a small-scale simple neural network."
authors = ["Elmo Moilanen"]
license = "CC0-1.0"
readme = "README.md"
keywords = ["statistics", "neural network", "supervised learning", "evolutionary algorithms"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25"
matplotlib = "^3.7"
h5py = "^3.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.3"
pytest = "^8.1"
flake8 = "^7.0"
coverage = "^7.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
jupyter = "1.0.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | docs
  | examples
)/
'''

[tool.pytest.ini_options]
addopts = "--doctest-modules --disable-warnings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
