[tool.poetry]
name = "simple-neural-network"
version = "1.0.0"
description = "Introduces a small-scale simple neural network."
authors = ["Elmo Moilanen"]
license = "CC0-1.0"
readme = "README.md"
keywords = ["statistics", "neural network", "supervised learning", "evolutionary algorithms"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2"
matplotlib = "^3.9"
h5py = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1"
pytest = "^8.3"
flake8 = "^7.0"
coverage = "^7.6"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-rtd-theme = "^3.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
jupyter = "^1.1"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | docs
  | examples
)/
'''

[tool.pytest.ini_options]
addopts = "--doctest-modules --disable-warnings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
